# lead-qualification-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: health.py  leads.py  router.py
app/core/: __init__.py  config.py  errors.py  logging.py  middleware.py
app/llm/: __init__.py  base.py  factory.py  openai.py  usage.py
app/prompts/: __init__.py  lead_qualification_v1.py  registry.py
app/repositories/: __init__.py  cache.py  usage.py
app/schemas/: __init__.py  errors.py  lead.py  qualification.py  shared.py  usage.py
app/services/: qualification_service.py
app/utils/: __init__.py  normalization.py  privacy.py
docs/: api.md  implementation-plan.md  prompt-design.md
docs/samples/: sample_requests.json
postman/: lead-qualification.postman_collection.json
tests/: test_health.py  test_qualification_service.py  test_schemas.py
tests/evaluation/: evaluate.py  lead_cases.jsonl
tests/integration/: test_cached_service.py  test_leads_api.py
tests/unit/: test_cache.py  test_hardening.py  test_normalization.py  test_privacy.py  test_usage.py
