[project]
name = "lead-qualification-agent"
version = "0.1.0"
description = "AI-assisted lead qualification API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "openai>=1.0,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "redis>=8.0.1",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.9,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"
